# place-description-service

./: Address.h  AddressExtractor.h  CMakeLists.txt  CurlHttp.h  CurlHttpTest.cpp  Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp  README.md
